fixed grids on mobile

--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -6508,7 +6508,7 @@ pre code {
     max-width: 100%;
   }
   .post {
-    grid-template-columns: auto;
+    grid-template-columns: auto !important;
   }
 }
 .post {
