--- a/themes/kmom02/scss/responsive.scss
+++ b/themes/kmom02/scss/responsive.scss
@@ -15,6 +15,6 @@
     max-width:100%;
   }
   .post {
-    grid-template-columns: auto;
+    grid-template-columns: auto !important;
   }
 }
